# usycal

./: .gitignore  Dockerfile  calendar.ics  contract1.yaml  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yml  update-calendar.yml
tests/: test_main.py
